--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,15 +11,32 @@
     android:gravity="center_horizontal"
     android:fitsSystemWindows="true">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="10dp"
-        android:text="@string/app_name"
-        android:textColor="@color/main_color"
-        android:textSize="26sp"
-        android:textStyle="bold" />
+        android:gravity="center_vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/app_name"
+            android:textColor="@color/main_color"
+            android:textSize="26sp"
+            android:textStyle="bold"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:layout_marginStart="45dp"/>
+        <ImageView
+            android:id="@+id/favroiteBtn"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/favorite_24"
+            app:tint="@color/main_color"
+            android:layout_marginEnd="20dp"/>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
