--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -54,7 +54,7 @@
         app:layout_constraintTop_toBottomOf="@+id/appname"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/favroiteBtn"
+        android:id="@+id/favroiteBtn1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
